src/passes/snapshots/lumina2__passes__cst_gen__test__statements__break_expression.snap
---
source: src/passes/cst_gen.rs
expression: break 1;
---
BreakStatement {
    tok_break: Break,
    value: Some(
        Literal(
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        1,
                    ),
                ),
            ),
        ),
    ),
    tok_semicolon: SemiColon,
}
