src/passes/snapshots/lumina2__passes__cst_gen__test__statements__break_nothing.snap
---
source: src/passes/cst_gen.rs
expression: break;
---
BreakStatement {
    tok_break: Break,
    value: None,
    tok_semicolon: SemiColon,
}
