src/passes/snapshots/lumina2__passes__cst_gen__test__statements__expr_semicolon.snap
---
source: src/passes/cst_gen.rs
expression: 1;
---
ExprStatement {
    expr: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    1,
                ),
            ),
        ),
    ),
    tok_semicolon: Some(
        SemiColon,
    ),
}
