src/passes/snapshots/lumina2__passes__cst_gen__test__statements__expression_no_semicolon.snap
---
source: src/passes/cst_gen.rs
expression: "1"
---
ExpressionStatement {
    expression: Literal(
        Integer(
            IntegerLiteral(
                IntegerLiteral(
                    1,
                ),
            ),
        ),
    ),
    tok_semicolon: None,
}
