src/passes/snapshots/lumina2__passes__cst_gen__test__statements__let_simple.snap
---
source: src/passes/cst_gen.rs
expression: let a = 1;
---
LetStatement {
    tok_let: Let,
    variable: Ident(
        "a",
    ),
    tok_eq: Eq,
    value: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    1,
                ),
            ),
        ),
    ),
    tok_semicolon: SemiColon,
}
