src/passes/snapshots/lumina2__passes__cst_gen__test__statements__return_expression.snap
---
source: src/passes/cst_gen.rs
expression: return 1;
---
ReturnStatement {
    tok_return: Return,
    value: Some(
        Literal(
            Integer(
                IntegerLiteral(
                    IntegerLiteral(
                        1,
                    ),
                ),
            ),
        ),
    ),
    tok_semicolon: SemiColon,
}
