src/passes/snapshots/lumina2__passes__cst_gen__test__statements__return_nothing.snap
---
source: src/passes/cst_gen.rs
expression: return;
---
ReturnStatement {
    tok_return: Return,
    value: None,
    tok_semicolon: SemiColon,
}
