src/passes/snapshots/lumina2__passes__cst_gen__test__statements__statements_expr.snap
---
source: src/passes/cst_gen.rs
expression: "1"
---
Expr(
    ExprStatement {
        expr: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        1,
                    ),
                ),
            ),
        ),
        tok_semicolon: None,
    },
)
